[package]
name = "mqtt-broker"
version = "0.1.0"
authors = ["Carmen Popoviciu <cpopoviciu@cloudflare.com>"]
edition = '2021'

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }


worker = { version="0.7.4", features = ["d1"] }
worker-macros = { version="0.7.4" }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6" # If you're using serde-wasm-bindgen
once_cell = "1.19"  # or latest stable
log = "0.4.6"
wasm-logger = "0.2.0"

console_log = { version = "1", features = ["color"] }



# futures-util = "0.3"
# bytes = "1.5"
# ahash = "0.8"

# Random generation

# rand = "0.9.2"
# uuid = { version = "1.10", features = ["v4", "serde", "js"] }
# http = "1.4.0"
# uuid = "1.19.0"
# imp = "0.1.0"


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# # `wasm-opt` is on by default in for the release profile, but it can be
# # disabled by setting it to `false`
# [package.metadata.wasm-pack.profile.release]
# # Should `wasm-opt` be used to further optimize the wasm binary generated after
# # the Rust compiler has finished? Using `wasm-opt` can often further decrease
# # binary size or do clever tricks that haven't made their way into LLVM yet.
# #
# # Configuration is set to `false` by default for the dev profile, but it can
# # be set to an array of strings which are explicit arguments to pass to
# # `wasm-opt`. For example `['-Os']` would optimize for size while `['-O4']`
# # would execute very expensive optimizations passes
# #
# # In most cases, the `-O[X]` flag is enough. However, if you require extreme
# # optimizations, see the full list of `wasm-opt` optimization flags
# # https://github.com/WebAssembly/binaryen/blob/version_117/test/lit/help/wasm-opt.test
# wasm-opt = [ '-g', '-O', '--asyncify']
